# curso-agentes-ia

./: .gitignore  pyproject.toml
1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  README.md  app.py
1_foundations/me/: summary.txt
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  3_lab3.py  4_lab4.ipynb
2_openai/deep_research/: deep_research.py  email_agent.py  planner_agent.py  question_agent.py  research_manager.py  research_manager_agent.py  search_agent.py  writer_agent.py
3_crew/coder/: spiral_animation.py
3_crew/engineering_team/: accounts.py  list_models.py  pyproject.toml
3_crew/prueba/: README.md  pyproject.toml  report.md
4_langgraph/: 2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  app.py  memory.db  memory.db-shm  memory.db-wal  sidekick.py  sidekick_tools.py
4_langgraph/sandbox/: informe_zewsweb.md  landing_chatbot.html
5_autogen/: 1_lab1_autogen_agentchat.ipynb  2_lab2_autogen_agentchat.ipynb  3_lab3_autogen_core.ipynb  4_lab4_autogen_distributed.ipynb  agent1.py  agent10.py  agent11.py  agent12.py  agent13.py  agent14.py  agent15.py  agent16.py  agent17.py  agent18.py  agent19.py  agent2.py  agent20.py  agent3.py  agent4.py  agent5.py  agent6.py  agent7.py  agent8.py  agent9.py  creator.py  idea1.md  idea10.md  idea11.md  idea12.md  idea13.md  idea14.md  idea15.md  idea16.md  idea17.md  idea18.md  idea19.md  idea2.md  idea20.md  idea3.md  idea4.md  (+8 more)
5_autogen/sandbox/: flights.md
6_mcp/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  5_lab5.ipynb  date_mcp_ollama.py  mcp_params.py  search_server.py  templates.py  traders.py  trading_floor.py
6_mcp/.playwright-mcp/: page-2026-05-11T20-02-41-318Z.yml  page-2026-05-11T20-02-47-556Z.yml  page-2026-05-11T20-03-05-293Z.yml  page-2026-05-11T20-03-19-470Z.yml  page-2026-05-11T20-03-29-189Z.yml  page-2026-05-11T20-03-34-965Z.yml  (+9 more)
6_mcp/community_contributions/2_aiobot_mcp/: .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  events_service.py  pyproject.toml  weather_service.py
6_mcp/community_contributions/asket-mcp/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
6_mcp/community_contributions/asket-mcp/asket_mcp/: config.py  logging_config.py
6_mcp/community_contributions/asket-mcp/asket_mcp/servers/: app.py
6_mcp/community_contributions/asket-mcp/asket_mcp/services/: agent_logic.py  brain_fs.py  pushover.py  url_fetch.py  vector_brain.py
6_mcp/community_contributions/asket-mcp/asket_mcp/store/: __init__.py  notes.py  user_profile.py
6_mcp/community_contributions/asket-mcp/asket_mcp/ui/: app.py  handlers.py  streamlit_app.py
6_mcp/community_contributions/env_align_mcp/: README.md  demo_agent.py  env_io.py  pyproject.toml  server.py
6_mcp/community_contributions/kachaje-andela-genai-bootcamp/: .gitignore  app.py  mcp_params.py  pyproject.toml  requirements.txt  setup.py  shared.py  traders.py  trading_floor.py  web_search_server.py
6_mcp/community_contributions/kachaje-andela-genai-bootcamp/local_trace/: __init__.py  trace.py  trace_ui.py
6_mcp/community_contributions/web_page_lang_auditor/: main.py  pyproject.toml  web_lang_auditor.py  web_lang_auditor_server.py
6_mcp/community_contributions/web_page_lang_auditor/input/: scope.csv
6_mcp/community_contributions/web_page_lang_auditor/output/: 2026_01_28_20_28_result.csv
6_mcp/sandbox/: banoffee.md
6_mcp_OLD/: 1_lab1.ipynb
(+772 files in other folders)
