[project]
name = "aiobot-community"
version = "1.0.0"
description = "Simple AI activity assistant with MCP weather and event search"
requires-python = ">=3.11,<3.12"
dependencies = [
    "openai>=1.59.5",
    "gradio>=5.9.1",
    "httpx>=0.28.1",
    "mcp>=1.3.2",
    "python-dotenv>=1.0.0",
    "openai-agents>=0.2.0",
]
